# Telegram-bot-ICP

./: Cargo.toml  README.md  canister_ids.json  dfx.json  generate_did.sh
src/http_outcalls_backend/: Cargo.toml  http_outcalls_backend.did
src/http_outcalls_backend/src/: lib.rs
