[package]
name = "http_outcalls_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17.0"
ic-stable-structures = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
telegram-bot-raw = "0.8.0" # If you're using telegram-bot-raw for Telegram API interaction
lazy_static = "1.4" # For global static variables